--- a/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
+++ b/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
@@ -168,6 +168,12 @@
     <ClCompile Include="source\FlacLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\MemoryPool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\MemoryBlockList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -831,6 +837,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\FlacLoader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MemoryPool.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MemoryBlockList.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
