--- a/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
+++ b/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="source\MemoryBlockList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\AudioStreamRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -843,6 +846,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MemoryBlockList.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AudioStreamRenderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
