--- a/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
+++ b/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
@@ -851,5 +851,8 @@
     <ClInclude Include="include\AudioStreamRenderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Config.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
