--- a/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
+++ b/SFZ_MIDI_Player/SFZ_MIDI_Player.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="source\AudioStreamRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Program.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -852,6 +855,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Config.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Program.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
